# Slurmer

./: Cargo.toml  LICENSE  README.md  bar.py  test.slurm  tmp.2
src/: app.rs  main.rs
src/slurm/: command.rs  mod.rs  squeue.rs
src/ui/: columns.rs  filter.rs  jobscript.rs  jobslist.rs  layout.rs  logview.rs  mod.rs
src/utils/: command.rs  event.rs  file_watcher.rs  fw.rs  mod.rs
