[package]
name = "slurmer"
version = "0.1.0"
description = "slurm TUI"
authors = ["wjwei-handsome <weiwenjie@westlake.edu.cn>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
tokio = { version = "1.36.0", features = ["full"] }
async-process = "2.1.0"
futures = "0.3.30"
regex = "1.10.2"
